--- a/src/App.scss
+++ b/src/App.scss
@@ -7,35 +7,14 @@
   grid-template-areas: 
   "h h "
   "n c";
-}
-
-.header{
-  grid-area: h;
-  background-color: rgb(27, 90, 46);
-  & img{
-    width: 50px;
-    height: 50px;
-  }
-}
-
-.nav{
-  grid-area: n;
-  background-color: rgb(225, 243, 64);
-}
-
-.content{
-  & img{
-    width: 100%;
-    height: 500px;
-  }
-  grid-area: c;
-  background-color: rgb(50, 60, 190);
-}
-
-.post-avatar{
-  & img{
-    width: 40px;
-    height: 40px;
-    margin: 10px;
+  // app-wrapper__content{}
+  &__content{
+    grid-area: c;
+    background-color: rgb(50, 60, 190);
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 2fr 10fr;
+    column-gap: 5px;
+    border-right: 2px solid #000;
   }
 }
