--- a/src/components/Dialogs/dialogs.module.scss
+++ b/src/components/Dialogs/dialogs.module.scss
@@ -6,6 +6,7 @@
         grid-template-columns: 2fr 10fr;
         column-gap: 5px;
         height: 500px;
+        overflow: auto;
     }
     //dialogs__menu{}
     &__menu{
@@ -34,34 +35,7 @@
             
         }
     }
-    &-content{
-        //.dialogs-content__body{}
-        &__body{
-            display: grid;
-            grid-template-columns: 3fr 9fr;
-            grid-template-rows: 1fr auto;
-            row-gap: 10px;
-        }
-        //.dialogs-content__avatar{}
-        &__avatar{}
-        //.dialogs-content__img-avatar{}
-        &__img-avatar{
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;            
-        }
-        //.dialogs-content__nick-avatar{}
-        &__nick-avatar{}
-        //.dialogs-content__message{}
-        &__message{
-            border: 1px solid;
-            border-radius: 5px;
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            max-width: 300px;
-        }
-    }
+    
 
 }
 
